syntax = "proto3";

package multisig;

import "helpers.proto";

message CreateWalletTx {
  string name = 1;
}

message AddSignerTx {
  exonum.PublicKey signer = 1;
}

message TransferTx {
  exonum.PublicKey recipient = 1;
  uint64 amount = 2;
  uint64 seed = 3;
}

message SignTx {
  exonum.PublicKey origin = 1;
  exonum.Hash tx_hash = 2;
}

message Wallet {
  exonum.PublicKey pub_key = 1;
  string name = 2;
  uint64 balance = 3; 
  repeated exonum.PublicKey signers = 4;
  repeated PendingTransaction pending_txs = 5;
  repeated ApprovedTransaction txs = 6;
  uint64 history_len = 7;
  exonum.Hash history_hash = 8;
}

message PendingTransaction {
  exonum.Hash tx_hash = 1;
  exonum.PublicKey recipient = 2;
  uint64 amount = 3;
  repeated exonum.PublicKey approvals = 4;
}

message ApprovedTransaction {
  exonum.Hash tx_hash = 1;
  exonum.PublicKey recipient = 2;
  uint64 amount = 3;
  repeated exonum.PublicKey approvals = 4;
  uint64 confirmation_block = 5;
}

message ConfirmationTx {
  exonum.Hash tx_hash = 1;
  exonum.PublicKey sender = 2;
  uint64 confirmation_block = 3;
}
